--- a/app/src/main/res/layout/activity_showcase.xml
+++ b/app/src/main/res/layout/activity_showcase.xml
@@ -10,7 +10,7 @@
 
         <TextView
             android:id="@+id/showcase_title"
-            android:text="DASHBOARD"
+            android:text="FOTOGRAM"
             style="@style/ActivityTitle" />
 
         <ListView
@@ -27,10 +27,15 @@
             android:background="@drawable/simple_gradient">
 
             <ImageButton
+                android:id="@+id/action_showcase"
+                style="@style/BottomMenuItems"
+                app:srcCompat="@drawable/ic_round_home_24px" />
+
+            <ImageButton
                 android:id="@+id/action_ownProfile"
                 style="@style/BottomMenuItems"
-                app:srcCompat="@drawable/ic_outline_face_24px"
-                android:layout_toRightOf="@id/action_goBack" />
+                android:layout_toRightOf="@id/action_showcase"
+                app:srcCompat="@drawable/ic_outline_face_24px" />
 
             <ImageButton
                 android:id="@+id/action_createPost"
