--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -29,9 +29,8 @@
 
             <ImageView
                 android:id="@+id/profileImage"
-                android:scaleType="fitXY"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:src="@drawable/ic_outline_account_box_24px" />
         </FrameLayout>
 
