--- a/app/src/main/res/drawable-sw600dp/rounded_button.xml
+++ b/app/src/main/res/drawable-sw600dp/rounded_button.xml
@@ -2,13 +2,15 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="oval">
-            <stroke android:color="@color/colorDirtyWhite" android:width="3dp" />
+            <stroke android:color="@color/colorBlack" android:width="3dp" />
+            <gradient android:startColor="#9c27b0" android:endColor="#673ab7" />
             <size android:width="100dp" android:height="100dp" />
         </shape>
     </item>
     <item>
         <shape android:shape="oval">
-            <solid android:color="@null" />
+            <gradient android:startColor="#9c27b0" android:endColor="#673ab7" />
+            <size android:width="100dp" android:height="100dp" />
         </shape>
     </item>
 </selector>
