--- a/app/src/main/res/layout-sw600dp/activity_showcase.xml
+++ b/app/src/main/res/layout-sw600dp/activity_showcase.xml
@@ -28,8 +28,7 @@
 
         <RelativeLayout
             android:id="@+id/showcase_bottomMenu"
-            style="@style/BottomNavBar"
-            android:background="@drawable/simple_gradient">
+            style="@style/BottomNavBar">
 
             <ImageButton
                 android:id="@+id/action_showcase"
