--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,11 +35,6 @@
         <item name="android:background">@drawable/textinput_border</item>
     </style>
 
-    <style name="CircularFrame" parent="Widget.AppCompat.ImageButton">
-        <item name="android:background">@drawable/rounded_button</item>
-        <item name="android:elevation">2dp</item>
-    </style>
-
     <style name="PostListFrame" parent="Widget.AppCompat.ImageButton">
         <item name="android:paddingLeft">20dp</item>
         <item name="android:paddingRight">20dp</item>
@@ -49,12 +44,13 @@
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginBottom">20dp</item>
         <item name="android:foregroundGravity">center</item>
+        <item name="android:scaleType">fitCenter</item>
     </style>
 
     <style name="BottomMenuItems" parent="Widget.AppCompat.ImageButton">
         <item name="android:layout_width">46dp</item>
         <item name="android:layout_height">46dp</item>
-        <item name="android:background">@null</item>
+        <item name="android:background">@drawable/rounded_button</item>
         <item name="android:layout_marginRight">50dp</item>
         <item name="android:tint">@color/colorDirtyWhite</item>
     </style>
